Fix cart-summary overflow-scroll bug

--- a/snowtum-shredders/app/globals.css
+++ b/snowtum-shredders/app/globals.css
@@ -30,3 +30,8 @@
 .footer a:hover {
   text-decoration: underline;
 }
+
+
+.disable-scrolsl {
+  overflow: hidden;
+}
